angular auth/loading flow Person listing